--- a/server/view/html/timeline.html
+++ b/server/view/html/timeline.html
@@ -38,7 +38,7 @@
 									<div class="rt_button"></div>
 									<div class="rt_counter">12</div>
 								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
+								<div class="tweet_text">後藤まりこの2ndソロアルバムは『ｍ＠ｕ』、Serph、スガダイローら参加 http://www.cinra.net/news/2013/10/21/130000.php …</div>
 								<div class="tweet_date">2013年10月28日 - 13:23</div>
 							</li>
 							<li>
