--- a/server/view/html/timeline.html
+++ b/server/view/html/timeline.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Timeline</title>
 		<link rel="stylesheet" href="/client/timeline/timeline.css">
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="/client/timeline/lib/jquery-ui.min.css">
 	</head>
 	<body>
 		<div id="wrapper">
@@ -13,7 +13,7 @@
 				<div id="account">
 					<div id="popup"></div>
 					<div id="user_logo"></div>
-					<div id="user_name">yuta_okano</div>
+					<div id="user_name"></div>
 				</div>
 			</div>
 			<div id="container">
@@ -30,105 +30,6 @@
 							<div id="box_button"></div>
 						</div>
 						<ul id="tweets">
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">25</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">12</div>
-								</div>
-								<div class="tweet_text">後藤まりこの2ndソロアルバムは『ｍ＠ｕ』、Serph、スガダイローら参加 http://www.cinra.net/news/2013/10/21/130000.php …</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">5</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">9</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
-							<li>
-								<div class="tweet_icon"></div>
-								<div class="tweet_buttons">
-									<div class="like_button"></div>
-									<div class="like_counter">222</div>
-									<div class="rt_button"></div>
-									<div class="rt_counter">333</div>
-								</div>
-								<div class="tweet_text">testtesttesttesttesttesttesttesttest　あｓｄふぁｓｄｌｋｆじゃｓｌｄｋｆじゃｓｌ；ｄｆ　あｓｌｄｋｆじゃｓｌ；ｄｋｆじゃｓｄ；ｌｋｆじゃｓ；ｄｆｌｋ　あｓ；ｌｄｆｋじゃｓ；ｌｄｆｋじゃｓ；ｄｌｆｋｊ</div>
-								<div class="tweet_date">2013年10月28日 - 13:23</div>
-							</li>
 						</ul>
 					</div>
 				</div>
@@ -138,10 +39,6 @@
 					<div class="spacer"></div>
 					<div id="profile_header">Profile</div>
 					<div id="profile_body">
-						カルチャーニュースサイト http:/CINRA.NET の公式アカウントです。ニュースとコンテンツの更新＋αをご紹介します。ご意見・問合せなどは http://CINRA.NET のウェブサイトのお問い合わせフォームからお送りください。
-						<br>
-						<br>
-						Tokyo
 					</div>
 				</div>
 			</div>
@@ -164,8 +61,23 @@
 			</div>
 		</div>
 		
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<script id="tweet_template" type="text/template">
+		<li>
+			<div class="tweet_icon"><img src="<%= user.profile_image_url %>"></div>
+			<div class="tweet_buttons">
+				<div class="like_button"></div>
+				<div class="like_counter">3</div>
+				<div class="rt_button"></div>
+				<div class="rt_counter">1</div>
+			</div>
+			<div class="tweet_text"><%= text %></div>
+			<div class="tweet_date"><%= created_at %></div>
+		</li>
+		</script>
+		
+		<script src="/client/timeline/lib/jquery-1.10.2.min.js"></script>
+		<script src="/client/timeline/lib/jquery-ui.min.js"></script>
+		<script src="/client/timeline/lib/underscore-min.js"></script>
 		<script src="/client/timeline/timeline.js"></script>
 	</body>
 </html>
