ラベルの修正

--- a/server/view/html/timeline.html
+++ b/server/view/html/timeline.html
@@ -21,7 +21,7 @@
 					<div class="spacer"></div>
 					<div id="main">
 						<div id="rainbow"></div>
-						<div id="main_header">Your Tweet</div>
+						<div id="main_header">Your Tweets</div>
 						<select id="tweet_filter">
 							<option val="your">Your Tweets</option>
 						</select>
