Twitter API を使った通信、セッション管理によるログイン・ログアウト

--- a/server/view/html/timeline.html
+++ b/server/view/html/timeline.html
@@ -12,8 +12,10 @@
 				<div id="twitter_logo"></div>
 				<div id="account">
 					<div id="popup"></div>
-					<div id="user_logo"></div>
-					<div id="user_name"></div>
+					<a href="/logout">
+						<div id="user_logo"></div>
+						<div id="user_name"></div>
+					</a>
 				</div>
 			</div>
 			<div id="container">
